# ComfyUI-Rodin

./: README.md  __init__.py  pyproject.toml  requirements.txt
Configs/: Craftsman_config.yaml  Era3D_config.yaml  StableFast3D_config.yaml  TriplaneGaussian_config.yaml  TripoSR_config.yaml  Wonder3D_config.yaml  system.conf
Configs/CRM_configs/: sd_v2_base_ipmv_chin8_zero_snr.yaml  sd_v2_base_ipmv_zero_SNR.yaml
Configs/CharacterGen_configs/: Stage_2D_infer.yaml  Stage_3D_infer.yaml
Configs/InstantMesh_configs/: instant_mesh_base.yaml  instant_mesh_large.yaml  instant_nerf_base.yaml  instant_nerf_large.yaml
Configs/Unique3D_configs/: image2mvimage.yaml  image2normal.yaml
py/: hyperhuman_Rodin.py
web/: visualization.js
web/html/: threeVisualizer-original.html
web/js/: threeVisualizer.js
web/js/common/: binding.js
web/threeVisualizer/: index.html
web/threeVisualizer/assets/: emHdBindings-A46AWXYl.js  emHdBindings-B2pBhR1n.js  emHdBindings-qRmJXJBb.js  emHdBindings.worker-CyHENA1f.js  emHdBindings.worker-DUEm-236.js  emHdBindings.worker-t1x5VIsg.js  index-BnKdBqH-.js  index-CCfjSMW2.js  index-DK4CQNFp.js  index-DfT-kUaP.css  index-DflpJK0e.css  index-RKRhsDCv.js  index-jZq8765w.css
webserver/: server.py
