[project]
name = "comfyui-rodin"
description = "Comfyui-rodin is a 3D generation extension based on Rodin-API. It provides many of the functionality nodes currently available in RodinAPI and It provides a 3D preview node for ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "Pillow", "Requests", "torch", "trimesh", "pyhocon"]

[project.urls]
Repository = "https://github.com/Ravenmelt/ComfyUI-Rodin"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Rodin"
Icon = ""
